frontend/test/should_pass/hom_009.grg
using deep_model_001;

rule r {
	x:A -e:Edge-> y:Ac -f:Edge-> z:B <-:Edge- zz:Accc;
	hom(x, y, zz);

	replace {
		x <-:Edge- y <-- z;
	}
}

