frontend/test/should_fail/exec_007.grg
using deep_model_001;

rule r(y : Acc) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    c : AcccAccAcA<b>;
    exec(r(b)); // b is a retyped element and cannot leave the modify part
  }
}
